workshop04/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
spec:
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weatherapp-container
        image: stackupiss/weather:v1
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
        ports:
        - name: weatherapp-port
          containerPort: 3000
