workshop04/weather-gw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: weather-ingress

spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "157.230.194.106"
    - "weather.157.230.194.106.nip.io"
