workshop04/weather-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: weather-vs

spec:
  hosts:
  - "*"
  gateways:
  - weather-ingress # weather-ingress.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /weather
    route:
    - destination:
        host: weatherapp-svc # weatherapp-svc.default.svc.cluster.local
        port: 
          number: 80
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherapp-svc # weatherapp-svc.default.svc.cluster.local
        port: 
          number: 80
